# wknml

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml  python-module.yml  test.yml
docs/: wknml.md
examples/: fix_unlinked_nml.py  minimal_nml_write.py  nml_group_tree_merger.py
testdata/: complex_dataset.fixture.nml  complex_dataset.nml.pickle  complex_dataset.nml.snapshot  dataset.fixture.nml  dataset.nml.pickle  dataset.nml.snapshot  expected_result.nml  nml_corrected_long_edges.nml  nml_with_approximated_distances.nml  nml_with_invalid_ids.nml  nml_with_multiple_user_bounding_boxes.nml  nml_with_small_distance_nodes.nml  nml_with_too_long_edges.nml  nml_without_default_values.nml
tests/: refresh_snapshots.py  test_nml_generation.py  test_nml_objects.py  test_nml_utils.py  test_snapshot_readandwrite.py  test_utils.py  test_utils_2.py
tests/scripts/: python_tests.sh
wknml/: __init__.py  __main__.py  nml_generation.py  nml_utils.py  nml_utils_2.py
