[tool.poetry]
name = "wknml"
version = "1.1.2"
description = "Python package to work with webKnossos NML skeleton files"
authors = ["scalable minds <hello@scalableminds.com>"]
readme = "README.md"
repository = "https://github.com/scalableminds/wknml"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
loxun = "2.0"
networkx = "^2.5"
numpy = "^1.17.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pydoc-markdown = "^3.8.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
